--- a/js/lib/中英文数字排序.html
+++ b/js/lib/中英文数字排序.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>中英文数字排序</title>
-    <script src="sortCompare.js"></script>
+    <script src="cnToPinin.js"></script>
 </head>
 <body>
     <script>
@@ -32,9 +32,44 @@
             }
         }
 
+        function objKeySort(obj) {//排序的函数
+            var newkey = Object.keys(obj).sort();
+            //先用Object内置类的keys方法获取要排序对象的属性名，再利用Array原型上的sort方法对获取的属性名进行排序，newkey是一个数组
+            var newObj = {};//创建一个新的对象，用于存放排好序的键值对
+            for (var i = 0; i < newkey.length; i++) {//遍历newkey数组
+                newObj[newkey[i]] = obj[newkey[i]];//向新创建的对象中按照排好的顺序依次增加键值对
+            }
+            return newObj;//返回排好序的新对象
+        }
+
+        function pySegSort(arr) {
+            var newObject = {};
+            arr.forEach(function(item) {
+                var initial = Pinyin.getFullChars(item).charAt(0).toUpperCase();
+                if(initial>='A'&&initial<='Z'){
+                    if (newObject[initial]){
+                        newObject[initial].push(item);
+                    } else {
+                        newObject[initial] = [item];
+                    }
+                }else{
+                    if (newObject['extra']){
+                        newObject['extra'].push(item);
+                    } else {
+                        newObject['extra'] = [item];
+                    }
+                }
+            });
+
+            for (let key in newObject) {
+                newObject[key] = newObject[key].sort(compare)
+            }
+            return objKeySort(newObject);
+        }
+
         const compareArray = ['中国', '美国', '印度', '阿富汗', '俄罗斯', '日本', '韩国', '新加坡', '朝鲜', '印度尼西亚', 'America'];
 
-        document.body.innerHTML = compareArray.sort(compare);
+        document.body.innerHTML = JSON.stringify(pySegSort(compareArray));
 </script>
 </body>
 </html>
